fixed some shitty alignment

--- a/src/stylesheets/application.sass
+++ b/src/stylesheets/application.sass
@@ -106,11 +106,14 @@ body
 .music_div
   margin-left: 0px
   border: #666666 1px solid
-  width: 250px
+  width: 300px
+  text-align: center
   background: #CCCCCC
   a
     margin-bottom: 15px
     font-size: 10px
+  img
+    border: none
 
 #footer
   clear: both
